1) Warning component shows when user is not logged in and tries to submit the form. 2) Fixed the colours on the calendar to be contrasting and readable.

--- a/frontend/src/components/CalendarMonth.css
+++ b/frontend/src/components/CalendarMonth.css
@@ -67,6 +67,7 @@
 
 .timeSpent{
     margin-top:18px;
-    font-weight:700;
-    color:#16a34a;
+    font-size: 18px;
+    font-weight:900;
+    justify-content: center;
 }
